# LEMNIS

./: .gitignore  CLAUDE.md  LICENSE  README.md  dfx.json
.github/workflows/: build.yml
conduit/: .env.example  .gitignore  app.json  google-services.json  package.json
conduit-backend/: .env.example
conduit-backend/api/: .env.example  package.json
conduit-backend/api/src/: db.ts  server.ts
conduit-backend/infra/: docker-compose.yml
conduit-backend/paymaster/src/: index.ts
conduit-backend/relay/: .env.example  mix.exs
conduit-backend/relay/config/: config.exs  dev.exs  runtime.exs  test.exs
conduit/android-messaging/: ConduitFirebaseMessagingService.kt
conduit/app/: _layout.tsx
conduit/app/(auth)/: create-wallet.tsx  onboarding.tsx
conduit/app/(tabs)/: _layout.tsx
conduit/extensions/NotificationService/: NotificationService.entitlements  NotificationService.swift
conduit/modules/conduit-crypto/: expo-module.config.json  package.json
conduit/modules/conduit-crypto/android/: CMakeLists.txt
conduit/modules/conduit-crypto/android/jni/: conduit_crypto_jni.cpp
conduit/modules/conduit-crypto/android/src/main/java/expo/modules/conduitcrypto/: ConduitCryptoJni.kt  ConduitCryptoModule.kt
conduit/modules/conduit-crypto/rust/: Cargo.toml
conduit/modules/conduit-crypto/rust/src/: lib.rs
conduit/modules/conduit-security/: expo-module.config.json  package.json
conduit/modules/expo-passkeys/: package.json
conduit/plugins/: withCertificatePinning.ts  withFirebaseMessagingService.ts  withNotificationServiceExtension.ts
conduit/public/.well-known/: README.md  assetlinks.json  (+1 more)
conduit/scripts/: extract-spki-pins.sh  gen-assets.js
docs/: ARCHITECTURE.md  GOVERNANCE.md  PRICING.md  ROADMAP.md  SECURITY.md
lemniskit/cli/: package-lock.json  package.json  tsconfig.json
protocol-28/billing/: main.mo
protocol-28/compute/: main.mo
protocol-28/database/: main.mo
protocol-28/identity/: main.mo
protocol-28/market-engine/: main.mo
protocol-28/solana-bridge/: main.mo
protocol-28/storage/: main.mo
(+82 files in other folders)
