[package]
name = "conduit-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "conduit_crypto"
crate-type = ["staticlib", "cdylib"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
zeroize = { version = "1.7", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
